fixed alert message not visible

--- a/skins/default/css/layout.css
+++ b/skins/default/css/layout.css
@@ -86,13 +86,11 @@
 	padding-right: 0.8em;
 }
 .overlay {
-	display: none;
 	position: absolute;
 	top: 0; left: 0; width: 100%; height: 100%;
 	z-index: 100;
 }
 .alert-container { 
-	display: none;
 	z-index: 101; 
 	position: absolute; 
 	top: 0; 
